--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "My App",
-  "short_name": "My App",
-  "description": "My App description",
+  "name": "Research demos",
+  "short_name": "Reseach demos",
+  "description": "Overview of demos and apps developed by geodan research",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#3f51b5",
