--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "test:regenerate_screenshots": "mocha test/integration/screenshots-baseline/regenerate.js --timeout=15000"
   },
   "dependencies": {
-    "@polymer/app-layout": "^3.0.0-pre.15",
-    "@polymer/iron-ajax": "^3.0.0-pre.15",
-    "@polymer/iron-flex-layout": "^3.0.0-pre.17",
-    "@polymer/lit-element": "^0.5.0",
-    "@polymer/paper-card": "^3.0.0-pre.17",
-    "@polymer/paper-item": "^3.0.0-pre.17",
-    "@webcomponents/webcomponentsjs": "^2.0.0-beta.2",
-    "pwa-helpers": "Polymer/pwa-helpers",
+    "@polymer/app-layout": "^3.0.0-pre.18",
+    "@polymer/iron-ajax": "^3.0.0-pre.18",
+    "@polymer/iron-flex-layout": "^3.0.0-pre.18",
+    "@polymer/lit-element": "^0.5.1",
+    "@polymer/paper-card": "^3.0.0-pre.18",
+    "@polymer/paper-item": "^3.0.0-pre.18",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "pwa-helpers": "github:Polymer/pwa-helpers",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1"
@@ -38,10 +38,10 @@
     "chai": "^4.1.2",
     "mocha": "^5.1.0",
     "pixelmatch": "^4.0.2",
-    "polymer-cli": "^1.7.0-pre.17",
-    "polyserve": "^0.27.0",
+    "polymer-cli": "^1.7.0",
+    "polyserve": "^0.27.11",
     "prpl-server": "^1.1.0",
-    "puppeteer": "^1.3.0",
+    "puppeteer": "^1.4.0",
     "renamer": "^0.6.1",
     "replace": "^0.3.0",
     "wct-browser-legacy": "0.0.1-pre.12"
